# ufo50ppo

./: Cargo.toml  README.md
src/: agent.rs  capture.rs  env.rs  input.rs  lib.rs  main.rs  model.rs  ppo.rs  preprocess.rs
src/game/: capture.rs  env.rs  input.rs  mod.rs
src/game/games/: mod.rs  ninpek.rs
src/game/games/ninpek/: game_over.rs  lives.rs  mod.rs  rewards.rs  score.rs  tracker.rs
src/games/: mod.rs
src/games/ninpek/: events.rs  game_over.rs  mem.rs  mod.rs  rewards.rs  tracker.rs
src/platform/: mod.rs
src/platform/win32/: capture.rs  input.rs  mod.rs
src/train/: adam.rs  agent.rs  mod.rs  model.rs  multi.rs  normalize.rs  ppo.rs  preprocess.rs  runner.rs
src/util/: bmp.rs  checkpoint.rs  cli.rs  logger.rs  mod.rs  shutdown.rs
